--- a/Image_Classification_Tutorial.ipynb
+++ b/Image_Classification_Tutorial.ipynb
@@ -51,6 +51,7 @@
       },
       "cell_type": "code",
       "source": [
+        "# Full tutorial with explanation at https://medium.com/@johnson.doc/create-a-world-class-deep-learning-model-using-google-drive-and-deploy-it-as-an-app-7edc6695bbac \n",
         "# Installing TuriCreate. This is our main package. TuriCreate is open sourced. \n",
         "# You can get more info about TuriCreate at https://github.com/apple/turicreate\n",
         "\n",
